# rusticauth

./: .env  .env.example  Cargo.toml  README.md  docker-compose.yml  dockerfile
.github/workflows/: ci.yml
migrations/: 001_inital_schema.sql  20240101000000_initial_schema.sql
src/: auth.rs  cleanup.rs  clients.rs  database.rs  jwt.rs  main.rs  middleware.rs  models.rs  oauth.rs  templates.rs
src/middleware/: auth.rs  mod.rs
static/: style.css
templates/: consent.html  error.html  login.html
