[package]
name = "rusticauth"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"

# Rate Limiter
actix-governor     = "0.3"

tokio = {version = "1", features = ["full"]}

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

dotenv = "0.15"

sqlx = { version = "0.6", features = ["runtime-actix-native-tls", "postgres", "macros", "chrono", "uuid"] }

argon2 = "0.4" 

jsonwebtoken = "9"

tower-http = { version = "0.3", features = ["cors", "trace", "request-id"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Random generation (for codes, tokens)
rand = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-actix-web = "0.7"

# Cryptography (for JWT keys)
ring = "0.16"

# Base64 encoding/decoding
base64 = "0.21"

url = "2.0"

tera = "1.0"              # HTML templating engine

# Session management
actix-session = { version = "0.7", features = ["cookie-session"] }

# Static file serving
actix-files = "0.6"       

# HTTP authentication helpers
actix-web-httpauth = "0.8"

# For PKCE code challenges
sha2 = "0.10"             

# For encoding
hex = "0.4"               

# Secure cookie handling
cookie = "0.17"           