[package]
name = "rusticauth"
version = "1.0.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4"
actix-session = { version = "0.7", features = ["cookie-session"] }
actix-files = "0.6"
actix-web-httpauth = "0.8"
actix-governor = "0.3"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.6", features = ["runtime-actix-native-tls", "postgres", "macros", "chrono", "uuid"] }

# Security
argon2 = "0.4"
jsonwebtoken = "9"
ring = "0.16"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
base64 = "0.21"
url = "2.0"
hex = "0.4"
sha2 = "0.10"

# Error handling & logging
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-actix-web = "0.7"

# Environment
dotenv = "0.15"

# Templates
tera = "1.0"

# HTTP utilities
tower-http = { version = "0.3", features = ["cors", "trace", "request-id"] }
cookie = "0.17"